// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webview renders arrays of children 1`] = `
<webview>
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
</webview>
`;

exports[`webview renders with accessKey="a,b,c,d" 1`] = `
<webview
  accessKey="a,b,c,d"
/>
`;

exports[`webview renders with autoCapitalize="characters" 1`] = `
<webview
  autoCapitalize="characters"
/>
`;

exports[`webview renders with autoCapitalize="none" 1`] = `
<webview
  autoCapitalize="none"
/>
`;

exports[`webview renders with autoCapitalize="off" 1`] = `
<webview
  autoCapitalize="off"
/>
`;

exports[`webview renders with autoCapitalize="on" 1`] = `
<webview
  autoCapitalize="on"
/>
`;

exports[`webview renders with autoCapitalize="sentences" 1`] = `
<webview
  autoCapitalize="sentences"
/>
`;

exports[`webview renders with autoCapitalize="words" 1`] = `
<webview
  autoCapitalize="words"
/>
`;

exports[`webview renders with children 1`] = `
<webview>
  TEST
</webview>
`;

exports[`webview renders with className="foo bar baz" 1`] = `
<webview
  className="foo bar baz"
/>
`;

exports[`webview renders with contentEditable="false" 1`] = `
<webview
  contentEditable="false"
/>
`;

exports[`webview renders with contentEditable="true" 1`] = `
<webview
  contentEditable="true"
/>
`;

exports[`webview renders with dir="auto" 1`] = `
<webview
  dir="auto"
/>
`;

exports[`webview renders with dir="ltr" 1`] = `
<webview
  dir="ltr"
/>
`;

exports[`webview renders with dir="rtl" 1`] = `
<webview
  dir="rtl"
/>
`;

exports[`webview renders with draggable="false" 1`] = `
<webview
  draggable="false"
/>
`;

exports[`webview renders with draggable="true" 1`] = `
<webview
  draggable="true"
/>
`;

exports[`webview renders with empty attributes 1`] = `<webview />`;

exports[`webview renders with hidden=false 1`] = `
<webview
  hidden={false}
/>
`;

exports[`webview renders with hidden=true 1`] = `
<webview
  hidden={true}
/>
`;

exports[`webview renders with id="TEST" 1`] = `
<webview
  id="TEST"
/>
`;

exports[`webview renders with inputMode="decimal" 1`] = `
<webview
  inputMode="decimal"
/>
`;

exports[`webview renders with inputMode="email" 1`] = `
<webview
  inputMode="email"
/>
`;

exports[`webview renders with inputMode="none" 1`] = `
<webview
  inputMode="none"
/>
`;

exports[`webview renders with inputMode="numeric" 1`] = `
<webview
  inputMode="numeric"
/>
`;

exports[`webview renders with inputMode="search" 1`] = `
<webview
  inputMode="search"
/>
`;

exports[`webview renders with inputMode="tel" 1`] = `
<webview
  inputMode="tel"
/>
`;

exports[`webview renders with inputMode="text" 1`] = `
<webview
  inputMode="text"
/>
`;

exports[`webview renders with inputMode="url" 1`] = `
<webview
  inputMode="url"
/>
`;

exports[`webview renders with is="foo" 1`] = `
<webview
  is="foo"
/>
`;

exports[`webview renders with itemID="https://google.com/" 1`] = `
<webview
  itemID="https://google.com/"
/>
`;

exports[`webview renders with itemProp="https://google.com/" 1`] = `
<webview
  itemProp="https://google.com/"
/>
`;

exports[`webview renders with itemRef="foo bar" 1`] = `
<webview
  itemRef="foo bar"
/>
`;

exports[`webview renders with itemScope=false 1`] = `
<webview
  itemScope={false}
/>
`;

exports[`webview renders with itemScope=true 1`] = `
<webview
  itemScope={true}
/>
`;

exports[`webview renders with itemType="https://google.com/" 1`] = `
<webview
  itemType="https://google.com/"
/>
`;

exports[`webview renders with lang="" 1`] = `
<webview
  lang=""
/>
`;

exports[`webview renders with lang="es-419" 1`] = `
<webview
  lang="es-419"
/>
`;

exports[`webview renders with slot="TEST" 1`] = `
<webview
  slot="TEST"
/>
`;

exports[`webview renders with spellCheck="false" 1`] = `
<webview
  spellCheck="false"
/>
`;

exports[`webview renders with spellCheck="true" 1`] = `
<webview
  spellCheck="true"
/>
`;

exports[`webview renders with style={"color":"#000000"} 1`] = `
<webview
  style={
    Object {
      "color": "#000000",
    }
  }
/>
`;

exports[`webview renders with tabIndex=1 1`] = `
<webview
  tabIndex={1}
/>
`;

exports[`webview renders with title="TEST" 1`] = `
<webview
  title="TEST"
/>
`;

exports[`webview renders with translate="no" 1`] = `
<webview
  translate="no"
/>
`;

exports[`webview renders with translate="yes" 1`] = `
<webview
  translate="yes"
/>
`;

exports[`webview renders without attributes 1`] = `<webview />`;
